--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <title>Piano Player</title>
-    <style> 
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            background-color: rgb(123, 187, 212);
+        }
 
-    body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    background-color: rgb(123, 187, 212);
-}
+        .piano-container {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 80px;
+        }
 
-.piano-container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 80px;
-}
+        .piano-row {
+            display: flex;
+            justify-content: center;
+        }
 
-.piano-row {
-    display: flex;
-    justify-content: center;
-}
+        @keyframes ripple {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
 
-@keyframes ripple {
-    0% { transform: scale(1); opacity: 1; }
-    100% {transform: scale(1.2); opacity: 0; }
-}
+            100% {
+                transform: scale(1.2);
+                opacity: 0;
+            }
+        }
 
         .piano-key {
             width: 100px;
@@ -43,15 +50,15 @@
             cursor: pointer;
             transition: transform 0.1s ease;
             animation: forwards
-            
         }
-.piano-key:active {
-    background-color: orange;
-    transform: scale(0.90);
-}
 
+        .piano-key:active {
+            background-color: orange;
+            transform: scale(0.90);
+        }
     </style>
 </head>
+
 <body>
     <div class="piano-container">
 
@@ -71,8 +78,8 @@
         <audio id="sound-G1" preload=" auto">
             <source src="piano-t5.wav" type="audio/wav">
         </audio>
-       <!-- middle row -->
-         <audio id="sound-A2" preload=" auto">
+        <!-- middle row -->
+        <audio id="sound-A2" preload=" auto">
             <source src="piano-m1.wav" type="audio/wav">
         </audio>
         <audio id="sound-B2" preload=" auto">
@@ -105,41 +112,48 @@
         </audio>
 
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('C1')">C</div>
-            <div class="piano-key" onmousedown="playNote('D1')">D</div>
-            <div class="piano-key" onmousedown="playNote('E1')">E</div>
-            <div class="piano-key" onmousedown="playNote('F1')">F</div>
-            <div class="piano-key" onmousedown="playNote('G1')">G</div>
-        </div>
-        <div class="piano-row">    
-            <div class="piano-key" onmousedown="playNote('A2')">A</div>
-            <div class="piano-key" onmousedown="playNote('B2')">B</div>
-            <div class="piano-key" onmousedown="playNote('C2')">C</div>
-            <div class="piano-key" onmousedown="playNote('D2')">D</div>
-            <div class="piano-key" onmousedown="playNote('E2')">E</div>
+            <div class="piano-key" onmousedown="playNote('C1')" onmousedown="playNote('C1')">C</div>
+            <div class="piano-key" onmousedown="playNote('D1')" onmousedown="playNote('C1')">D</div>
+            <div class="piano-key" onmousedown="playNote('E1')" onmousedown="playNote('C1')">E</div>
+            <div class="piano-key" onmousedown="playNote('F1')" onmousedown="playNote('C1')">F</div>
+            <div class="piano-key" onmousedown="playNote('G1')" onmousedown="playNote('C1')">G</div>
         </div>
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('F3')">F</div>
-            <div class="piano-key" onmousedown="playNote('G3')">G</div>
-            <div class="piano-key" onmousedown="playNote('A3')">A</div>
-            <div class="piano-key" onmousedown="playNote('B3')">B</div>
-            <div class="piano-key" onmousedown="playNote('C3')">C</div>
+            <div class="piano-key" onmousedown="playNote('A2')"onmousedown="playNote('C1')">A</div>
+            <div class="piano-key" onmousedown="playNote('B2')"onmousedown="playNote('C1')">B</div>
+            <div class="piano-key" onmousedown="playNote('C2')"onmousedown="playNote('C1')">C</div>
+            <div class="piano-key" onmousedown="playNote('D2')"onmousedown="playNote('C1')">D</div>
+            <div class="piano-key" onmousedown="playNote('E2')"onmousedown="playNote('C1')">E</div>
+        </div>
+        <div class="piano-row">
+            <div class="piano-key" onmousedown="playNote('F3')"onmousedown="playNote('C1')">F</div>
+            <div class="piano-key" onmousedown="playNote('G3')"onmousedown="playNote('C1')">G</div>
+            <div class="piano-key" onmousedown="playNote('A3')"onmousedown="playNote('C1')">A</div>
+            <div class="piano-key" onmousedown="playNote('B3')"onmousedown="playNote('C1')">B</div>
+            <div class="piano-key" onmousedown="playNote('C3')"onmousedown="playNote('C1')">C</div>
         </div>
     </div>
-    
+
     <script>
-    function playNote(noteId) {
-        console.log("Playing: " + noteId);
+        function playNote(noteId) {
+            console.log("Playing: " + noteId);
 
             var audio = document.getElementById('sound-' + noteId);
             if (audio) {
                 var audioClone = audio.cloneNode(true);
                 audioClone.play()
                 audio.play()
-        } else {
-            console.log("No sound file for: " + noteId);
+            } else {
+                console.log("No sound file for: " + noteId);
+            }
         }
-    }
+
+            var allKeys = document.getElementsByClassName('piano-key');
+            for (var i = 0; i < allKeys.length; i++) {
+                allKeys[i].addEventListener('mousedown', function() {
+            });
+        }
     </script>
 </body>
+
 </html>
