--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
         </audio>
 
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('C1')" onmousedown="playNote('C1')">C</div>
-            <div class="piano-key" onmousedown="playNote('D1')" onmousedown="playNote('C1')">D</div>
-            <div class="piano-key" onmousedown="playNote('E1')" onmousedown="playNote('C1')">E</div>
-            <div class="piano-key" onmousedown="playNote('F1')" onmousedown="playNote('C1')">F</div>
-            <div class="piano-key" onmousedown="playNote('G1')" onmousedown="playNote('C1')">G</div>
+            <div class="piano-key" onmousedown="playNote('C1')" ontouchstart="playNote('C1')">C</div>
+            <div class="piano-key" onmousedown="playNote('D1')" ontouchstart="playNote('C1')">D</div>
+            <div class="piano-key" onmousedown="playNote('E1')" ontouchstart="playNote('C1')">E</div>
+            <div class="piano-key" onmousedown="playNote('F1')" ontouchstart="playNote('C1')">F</div>
+            <div class="piano-key" onmousedown="playNote('G1')" ontouchstart="playNote('C1')">G</div>
         </div>
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('A2')"onmousedown="playNote('C1')">A</div>
-            <div class="piano-key" onmousedown="playNote('B2')"onmousedown="playNote('C1')">B</div>
-            <div class="piano-key" onmousedown="playNote('C2')"onmousedown="playNote('C1')">C</div>
-            <div class="piano-key" onmousedown="playNote('D2')"onmousedown="playNote('C1')">D</div>
-            <div class="piano-key" onmousedown="playNote('E2')"onmousedown="playNote('C1')">E</div>
+            <div class="piano-key" onmousedown="playNote('A2')"ontouchstart="playNote('C1')">A</div>
+            <div class="piano-key" onmousedown="playNote('B2')"ontouchstart="playNote('C1')">B</div>
+            <div class="piano-key" onmousedown="playNote('C2')"ontouchstart="playNote('C1')">C</div>
+            <div class="piano-key" onmousedown="playNote('D2')"ontouchstart="playNote('C1')">D</div>
+            <div class="piano-key" onmousedown="playNote('E2')"ontouchstart="playNote('C1')">E</div>
         </div>
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('F3')"onmousedown="playNote('C1')">F</div>
-            <div class="piano-key" onmousedown="playNote('G3')"onmousedown="playNote('C1')">G</div>
-            <div class="piano-key" onmousedown="playNote('A3')"onmousedown="playNote('C1')">A</div>
-            <div class="piano-key" onmousedown="playNote('B3')"onmousedown="playNote('C1')">B</div>
-            <div class="piano-key" onmousedown="playNote('C3')"onmousedown="playNote('C1')">C</div>
+            <div class="piano-key" onmousedown="playNote('F3')"ontouchstart="playNote('C1')">F</div>
+            <div class="piano-key" onmousedown="playNote('G3')"ontouchstart="playNote('C1')">G</div>
+            <div class="piano-key" onmousedown="playNote('A3')"ontouchstart="playNote('C1')">A</div>
+            <div class="piano-key" onmousedown="playNote('B3')"ontouchstart="playNote('C1')">B</div>
+            <div class="piano-key" onmousedown="playNote('C3')"ontouchstart="playNote('C1')">C</div>
         </div>
     </div>
 
