--- a/index.html
+++ b/index.html
@@ -112,25 +112,40 @@
         </audio>
 
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('C1')" ontouchstart="playNote('C1')">C</div>
-            <div class="piano-key" onmousedown="playNote('D1')" ontouchstart="playNote('D1')">D</div>
-            <div class="piano-key" onmousedown="playNote('E1')" ontouchstart="playNote('E1')">E</div>
-            <div class="piano-key" onmousedown="playNote('F1')" ontouchstart="playNote('F1')">F</div>
-            <div class="piano-key" onmousedown="playNote('G1')" ontouchstart="playNote('G1')">G</div>
+            <div class="piano-key" onmousedown="playNote('C1')" 
+            ontouchstart="playNoteTouch('C1')">C</div>
+            <div class="piano-key" onmousedown="playNote('D1')" 
+            ontouchstart="playNoteTouch('D1')">D</div>
+            <div class="piano-key" onmousedown="playNote('E1')" 
+            ontouchstart="playNoteTouch('E1')">E</div>
+            <div class="piano-key" onmousedown="playNote('F1')" 
+            ontouchstart="playNoteTouch('F1')">F</div>
+            <div class="piano-key" onmousedown="playNote('G1')" 
+            ontouchstart="playNoteTouch('G1')">G</div>
         </div>
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('A2')"ontouchstart="playNote('A2')">A</div>
-            <div class="piano-key" onmousedown="playNote('B2')"ontouchstart="playNote('B2')">B</div>
-            <div class="piano-key" onmousedown="playNote('C2')"ontouchstart="playNote('C2')">C</div>
-            <div class="piano-key" onmousedown="playNote('D2')"ontouchstart="playNote('D2')">D</div>
-            <div class="piano-key" onmousedown="playNote('E2')"ontouchstart="playNote('E2')">E</div>
+            <div class="piano-key" onmousedown="playNote('A2')"
+            ontouchstart="playNoteTouch('A2')">A</div>
+            <div class="piano-key" onmousedown="playNote('B2')"
+            ontouchstart="playNoteTouch('B2')">B</div>
+            <div class="piano-key" onmousedown="playNote('C2')"
+            ontouchstart="playNoteTouch('C2')">C</div>
+            <div class="piano-key" onmousedown="playNote('D2')"
+            ontouchstart="playNoteTouch('D2')">D</div>
+            <div class="piano-key" onmousedown="playNote('E2')"
+            ontouchstart="playNoteTouch('E2')">E</div>
         </div>
         <div class="piano-row">
-            <div class="piano-key" onmousedown="playNote('F3')"ontouchstart="playNote('F3')">F</div>
-            <div class="piano-key" onmousedown="playNote('G3')"ontouchstart="playNote('G3')">G</div>
-            <div class="piano-key" onmousedown="playNote('A3')"ontouchstart="playNote('A3')">A</div>
-            <div class="piano-key" onmousedown="playNote('B3')"ontouchstart="playNote('B3')">B</div>
-            <div class="piano-key" onmousedown="playNote('C3')"ontouchstart="playNote('C3')">C</div>
+            <div class="piano-key" onmousedown="playNote('F3')"
+            ontouchstart="playNoteTouch('F3')">F</div>
+            <div class="piano-key" onmousedown="playNote('G3')"
+            ontouchstart="playNoteTouch('G3')">G</div>
+            <div class="piano-key" onmousedown="playNote('A3')"
+            ontouchstart="playNoteTouch('A3')">A</div>
+            <div class="piano-key" onmousedown="playNote('B3')"
+            ontouchstart="playNoteTouch('B3')">B</div>
+            <div class="piano-key" onmousedown="playNote('C3')"o
+            ntouchstart="playNoteTouch('C3')">C</div>
         </div>
     </div>
 
@@ -143,16 +158,21 @@
                 var audioClone = audio.cloneNode(true);
                 audioClone.play()
                 audio.play()
-            } else {
+        } else {
                 console.log("No sound file for: " + noteId);
-            }
-        }
+    }
+}
+
+        function playNoteTouch(noteId, event) {
+            event.preventDefault();
+            playNote(noteId);
+}
 
             var allKeys = document.getElementsByClassName('piano-key');
             for (var i = 0; i < allKeys.length; i++) {
                 allKeys[i].addEventListener('mousedown', function() {
-            });
-        }
+    });
+ }
     </script>
 </body>
 
