--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="piano-row">
             <div class="piano-key" onmousedown="playNote('C1')" 
-            ontouchstart="testTouch('C1')">C</div>
+            ontouchend="testTouch('C1')">C</div>
             <div class="piano-key" onmousedown="playNote('D1')" 
             ontouchstart="playNoteTouch('D1')">D</div>
             <div class="piano-key" onmousedown="playNote('E1')" 
